--- a/julia-output/adv-functions.ipynb
+++ b/julia-output/adv-functions.ipynb
@@ -652,6 +652,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "g! (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function g!(x)\n",
+    "  x = 2*x\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x=4\n",
+    "g(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -660,7 +720,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0-rc1",
+   "display_name": "Julia 1.11.0-rc2",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -668,7 +728,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0-rc1"
+   "version": "1.11.0-rc2"
   }
  },
  "nbformat": 4,
