--- a/julia-output/rootfinding.ipynb
+++ b/julia-output/rootfinding.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -327,13 +327,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "newton (generic function with 2 methods)"
+       "newton (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -372,13 +372,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "newton (generic function with 2 methods)"
+       "newton (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -387,8 +387,8 @@
    ],
    "source": [
     "function newton(f::Function, df::Function, x0::Number)\n",
-    "  local dx = 1\n",
-    "  local x1 = x0\n",
+    "  local dx = f(x0)/df(x0)\n",
+    "  local x1 = x0 - dx\n",
     "  while abs(dx) > 1e-6\n",
     "    dx = f(x1)/df(x1)\n",
     "    x1 -= dx\n",
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -452,8 +452,8 @@
    ],
    "source": [
     "function newton(f::Function, x0::Number)\n",
-    "  local dx = 1\n",
-    "  local x1 = x0\n",
+    "  local dx = f(x0)/df(x0)\n",
+    "  local x1 = x0 -dx\n",
     "  local steps = 0\n",
     "  while abs(dx)>1e-6 && steps < 10\n",
     "    dx = f(x1)/ForwardDiff.derivative(f,x1)\n",
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -485,13 +485,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.001953125"
+       "0.001976656626506024"
       ]
      },
      "metadata": {},
@@ -512,7 +512,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0-rc1",
+   "display_name": "Julia 1.11.0-rc2",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -520,7 +520,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0-rc1"
+   "version": "1.11.0-rc2"
   }
  },
  "nbformat": 4,
