--- a/julia-output/data-types.ipynb
+++ b/julia-output/data-types.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -477,15 +477,15 @@
       "  [9] _mapreduce(f::var\"#11#12\", op::typeof(Base.add_sum), ::IndexLinear, A::UnitRange{Int64})\n",
       "    @ Base ./reduce.jl:444\n",
       " [10] _mapreduce_dim(f::Function, op::Function, ::Base._InitialValue, A::UnitRange{Int64}, ::Colon)\n",
-      "    @ Base ./reducedim.jl:335\n",
+      "    @ Base ./reducedim.jl:336\n",
       " [11] mapreduce\n",
-      "    @ ./reducedim.jl:327 [inlined]\n",
+      "    @ ./reducedim.jl:328 [inlined]\n",
       " [12] _sum\n",
-      "    @ ./reducedim.jl:985 [inlined]\n",
+      "    @ ./reducedim.jl:986 [inlined]\n",
       " [13] sum(f::Function, a::UnitRange{Int64})\n",
-      "    @ Base ./reducedim.jl:981\n",
+      "    @ Base ./reducedim.jl:982\n",
       " [14] top-level scope\n",
-      "    @ ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X11sZmlsZQ==.jl:1"
+      "    @ ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X32sZmlsZQ==.jl:1"
      ]
     }
    ],
@@ -704,6 +704,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 7.8, \"Hello\")"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "(5,7.8, \"Hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Tuple{Int64, Float64, String}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "typeof((5,7.8, \"Hello\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
@@ -802,7 +840,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0-rc2",
+   "display_name": "Julia 1.11.0-rc3",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -810,7 +848,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0-rc2"
+   "version": "1.11.0-rc3"
   }
  },
  "nbformat": 4,
