--- a/julia-output/arrays.ipynb
+++ b/julia-output/arrays.ipynb
@@ -484,6 +484,178 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 7]"
+     ]
+    }
+   ],
+   "source": [
+    "A=collect(1:2:13);print(splice!(A,3:4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5-element Vector{Int64}:\n",
+       "  1\n",
+       "  3\n",
+       "  9\n",
+       " 11\n",
+       " 13"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5-element Vector{Int64}:\n",
+       "  1\n",
+       "  5\n",
+       "  7\n",
+       "  9\n",
+       " 11"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "A=collect(1:2:11)\n",
+    "x = splice!(A,2)\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10-element Vector{Int64}:\n",
+       "  1\n",
+       "  3\n",
+       " 11\n",
+       " 12\n",
+       " 13\n",
+       " 14\n",
+       "  5\n",
+       "  7\n",
+       "  9\n",
+       " 11"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "A=collect(1:2:11)\n",
+    "B=splice!(A,3:2,[11,12,13,14])\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "A=collect(1:2:11)\n",
+    "x = splice!(A,3,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6-element Vector{Int64}:\n",
+       "  1\n",
+       "  3\n",
+       "  4\n",
+       "  7\n",
+       "  9\n",
+       " 11"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8-element Vector{Int64}:\n",
+       "  1\n",
+       "  3\n",
+       " -1\n",
+       " -2\n",
+       " -3\n",
+       "  7\n",
+       "  9\n",
+       " 11"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "A=collect(1:2:11)\n",
+    "splice!(A,3,[-1,-2,-3])\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -650,7 +822,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0-rc2",
+   "display_name": "Julia 1.11.0-rc3",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -658,7 +830,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0-rc2"
+   "version": "1.11.0-rc3"
   }
  },
  "nbformat": 4,
