--- a/julia-output/functional-programming.ipynb
+++ b/julia-output/functional-programming.ipynb
@@ -695,7 +695,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0-beta2",
+   "display_name": "Julia 1.11.0-rc3",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -703,7 +703,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0-beta2"
+   "version": "1.11.0-rc3"
   }
  },
  "nbformat": 4,
