Update boolean loop chapter.

--- a/julia-output/boolean-loops.ipynb
+++ b/julia-output/boolean-loops.ipynb
@@ -144,6 +144,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "quadrant (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function quadrant(x::Real,y::Real)\n",
+    "  if x > 0 && y > 0\n",
+    "    return \"I\"\n",
+    "  elseif x < 0 && y > 0\n",
+    "    return \"II\"\n",
+    "  elseif x < 0 && y < 0\n",
+    "    return \"III\"\n",
+    "  elseif x > 0 && y < 0\n",
+    "    return \"IV\"\n",
+    "  else\n",
+    "    return \"NONE\"\n",
+    "  end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"NONE\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "quadrant(0,-3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "quadrant2 (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function quadrant2(x::Real, y::Real)\n",
+    "  x > 0 && y > 0 ? \"I\" :\n",
+    "    x < 0 && y > 0 ? \"II\" :\n",
+    "    x < 0 && y < 0 ? \"III\" :\n",
+    "    x > 0 && y < 0 ? \"IV\" : \"NONE\"\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"NONE\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "quadrant2(0,-3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -248,7 +341,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0-rc2",
+   "display_name": "Julia 1.11.0-rc3",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -256,7 +349,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0-rc2"
+   "version": "1.11.0-rc3"
   }
  },
  "nbformat": 4,
