split functional programming chapter and cleanup.

--- a/julia-output/arrays.ipynb
+++ b/julia-output/arrays.ipynb
@@ -433,6 +433,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5-element Vector{String}:\n",
+       " \"This\"\n",
+       " \"a\"\n",
+       " \"array\"\n",
+       " \"is\"\n",
+       " \"string\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "B = [\"This\",\"is\",\"a\",\"string\",\"array\"]\n",
+    "sort(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9-element Vector{Int64}:\n",
+       " 3\n",
+       " 6\n",
+       " 9\n",
+       " 1\n",
+       " 4\n",
+       " 7\n",
+       " 2\n",
+       " 5\n",
+       " 8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "C = collect(1:9)\n",
+    "sort(C, by = x->mod(x,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
