--- a/julia-output/boolean-loops.ipynb
+++ b/julia-output/boolean-loops.ipynb
@@ -237,6 +237,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function bisection(f::Function, a::Real, b::Real)\n",
+    "  local c\n",
+    "  local n = 0\n",
+    "  while (b-a) > 1e-6 && n < 10\n",
+    "    c = 0.5*(a+b)  # find the midpoint\n",
+    "    # test if f(a) and f(c) have opposite signs to determine the new interval\n",
+    "    (a,b) = f(a)*f(c) < 0 ? (a,c) : (c,b)\n",
+    "    n += 1\n",
+    "  end\n",
+    "  c\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
