--- a/julia-output/collections.ipynb
+++ b/julia-output/collections.ipynb
@@ -158,6 +158,237 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{String, Int64} with 3 entries:\n",
+       "  \"c\" => 3\n",
+       "  \"b\" => 2\n",
+       "  \"a\" => 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "d = Dict(\"a\"=>1, \"b\"=>2, \"c\" =>3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "d[\"a\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{Int64, Int64} with 5 entries:\n",
+       "  5 => 25\n",
+       "  4 => 16\n",
+       "  2 => 4\n",
+       "  3 => 9\n",
+       "  1 => 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "d2 = Dict(i => i^2 for i=1:5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{String, Int64} with 3 entries:\n",
+       "  \"lisa\"   => 8\n",
+       "  \"bart\"   => 10\n",
+       "  \"maggie\" => 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "s = Dict([(\"bart\", 10), (\"lisa\", 8), (\"maggie\", 1)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{String, Int64} with 4 entries:\n",
+       "  \"lisa\"   => 8\n",
+       "  \"homer\"  => 45\n",
+       "  \"bart\"   => 10\n",
+       "  \"maggie\" => 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "push!(s, \"homer\" => 45)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "pop!(s, \"maggie\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{String, Int64} with 3 entries:\n",
+       "  \"lisa\"  => 8\n",
+       "  \"homer\" => 45\n",
+       "  \"bart\"  => 10"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KeySet for a Dict{String, Int64} with 3 entries. Keys:\n",
+       "  \"lisa\"\n",
+       "  \"homer\"\n",
+       "  \"bart\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "keys(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{String, Any} with 5 entries:\n",
+       "  \"first_name\"   => \"Homer\"\n",
+       "  \"home_address\" => Dict(\"city\"=>\"Springfield\", \"street\"=>\"742 Evergreen Terrac…\n",
+       "  \"phones\"       => [\"home\"=>\"987-555-1234\", \"cell\"=>\"987-555-1212\"]\n",
+       "  \"work_address\" => Dict(\"city\"=>\"Springfield\", \"street\"=>\"10 Power Plant Lane\")\n",
+       "  \"last_name\"    => \"Simpson\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "homer = Dict(\n",
+    "  \"first_name\" => \"Homer\",\n",
+    "  \"last_name\" => \"Simpson\",\n",
+    "  \"phones\" => [\n",
+    "    \"home\" => \"987-555-1234\",\n",
+    "    \"cell\" => \"987-555-1212\"\n",
+    "  ],\n",
+    "  \"home_address\" => Dict(\n",
+    "    \"street\" => \"742 Evergreen Terrace\",\n",
+    "    \"city\" => \"Springfield\"\n",
+    "  ),\n",
+    "  \"work_address\" => Dict(\n",
+    "    \"street\" => \"10 Power Plant Lane\",\n",
+    "    \"city\" => \"Springfield\"\n",
+    "  )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"10 Power Plant Lane\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "homer[\"work_address\"][\"street\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
