updates and lots of spellchecking

--- a/julia-output/arrays.ipynb
+++ b/julia-output/arrays.ipynb
@@ -338,6 +338,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Broadcasting"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -377,6 +384,84 @@
    ],
    "source": [
     "sqrt.(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7-element Vector{Int64}:\n",
+       " -3\n",
+       " -2\n",
+       " -1\n",
+       "  0\n",
+       "  1\n",
+       "  2\n",
+       "  3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x=collect(-3:3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7-element Vector{Float64}:\n",
+       " 8103.507287599564\n",
+       "   56.4167448867956\n",
+       "    3.5597528132669414\n",
+       "    1.0\n",
+       "    3.5597528132669414\n",
+       "   56.4167448867956\n",
+       " 8103.507287599564"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x .* sin.(x)+exp.(x.^2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7-element Vector{Float64}:\n",
+       " 8103.507287599564\n",
+       "   56.4167448867956\n",
+       "    3.5597528132669414\n",
+       "    1.0\n",
+       "    3.5597528132669414\n",
+       "   56.4167448867956\n",
+       " 8103.507287599564"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@. x*sin(x) + exp(x^2)"
    ]
   },
   {
