--- a/julia-output/regexp.ipynb
+++ b/julia-output/regexp.ipynb
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -350,15 +350,33 @@
     }
    ],
    "source": [
-    "split( \"The dog jumps over the log\", r\"\\s\")"
+    "split( \"The dog\tjumps over the log\", r\"\\s\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6-element Vector{SubString{String}}:\n",
+       " \"1.0\"\n",
+       " \"2.0\"\n",
+       " \"3.0\"\n",
+       " \"4.5\"\n",
+       " \"7.9\"\n",
+       " \"-10\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "split(\"1.0,2.0,3.0;4.5,7.9;-10\", r\"[,;]\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -1511,7 +1529,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0-rc2",
+   "display_name": "Julia 1.11.0-rc3",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -1519,7 +1537,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0-rc2"
+   "version": "1.11.0-rc3"
   }
  },
  "nbformat": 4,
