A lot of changes, mainly in the plotting part.

--- a/julia-output/adv-functions.ipynb
+++ b/julia-output/adv-functions.ipynb
@@ -52,7 +52,7 @@
       "\n",
       "Stacktrace:\n",
       " [1] fact(n::Int64) (repeats 2 times)\n",
-      "   @ Main ~/code/sci-comp-book/julia-output/adv-functions.ipynb:1"
+      "   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W0sZmlsZQ==.jl:1"
      ]
     }
    ],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -96,9 +96,9 @@
       "\n",
       "Stacktrace:\n",
       " [1] fact(n::Int64)\n",
-      "   @ Main ~/code/sci-comp-book/julia-output/adv-functions.ipynb:2\n",
+      "   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W3sZmlsZQ==.jl:2\n",
       " [2] top-level scope\n",
-      "   @ ~/code/sci-comp-book/julia-output/adv-functions.ipynb:1"
+      "   @ ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W4sZmlsZQ==.jl:1"
      ]
     }
    ],
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
     "function findMax(nums::Real...)\n",
     "\tlocal max = -Inf\n",
     "\tfor num in nums\n",
-    "\t\tif num &gt; max\n",
+    "\t\tif num > max\n",
     "\t\t\tmax = num\n",
     "\t\tend\n",
     "\tend\n",
@@ -446,7 +446,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching findMax(::Vector{Int64})\nThe function `findMax` exists, but no method is defined for this combination of argument types.\n\nClosest candidates are:\n  findMax(!Matched::Real, !Matched::Real)\n   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X24sZmlsZQ==.jl:1\n  findMax(!Matched::Real...)\n   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X25sZmlsZQ==.jl:1\n",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: no method matching findMax(::Vector{Int64})\n",
+      "The function `findMax` exists, but no method is defined for this combination of argument types.\n",
+      "\n",
+      "Closest candidates are:\n",
+      "  findMax(!Matched::Real, !Matched::Real)\n",
+      "   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X24sZmlsZQ==.jl:1\n",
+      "  findMax(!Matched::Real...)\n",
+      "   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X25sZmlsZQ==.jl:1\n",
+      "\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X52sZmlsZQ==.jl:1"
+     ]
+    }
+   ],
+   "source": [
+    "findMax(collect(1:10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +493,7 @@
     "function findMax(arr::Vector{Real})\n",
     "\tlocal max = -Inf\n",
     "\tfor num in arr\n",
-    "\t\tif num &gt; max\n",
+    "\t\tif num > max\n",
     "\t\t\tmax = num\n",
     "\t\tend\n",
     "\tend\n",
@@ -473,12 +503,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "ename": "MethodError",
-     "evalue": "MethodError: no method matching findMax(::Vector{Int64})\nThe function `findMax` exists, but no method is defined for this combination of argument types.\n\nClosest candidates are:\n  findMax(!Matched::Vector{Real})\n   @ Main ~/code/sci-comp-book/julia-output/adv-functions.ipynb:1\n  findMax(!Matched::Real, !Matched::Real)\n   @ Main ~/code/sci-comp-book/julia-output/adv-functions.ipynb:1\n  findMax(!Matched::Real...)\n   @ Main ~/code/sci-comp-book/julia-output/adv-functions.ipynb:1\n",
+     "evalue": "MethodError: no method matching findMax(::Vector{Int64})\nThe function `findMax` exists, but no method is defined for this combination of argument types.\n\nClosest candidates are:\n  findMax(!Matched::Vector{Real})\n   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X26sZmlsZQ==.jl:1\n  findMax(!Matched::Real, !Matched::Real)\n   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X24sZmlsZQ==.jl:1\n  findMax(!Matched::Real...)\n   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X25sZmlsZQ==.jl:1\n",
      "output_type": "error",
      "traceback": [
       "MethodError: no method matching findMax(::Vector{Int64})\n",
@@ -486,16 +516,16 @@
       "\n",
       "Closest candidates are:\n",
       "  findMax(!Matched::Vector{Real})\n",
-      "   @ Main ~/code/sci-comp-book/julia-output/adv-functions.ipynb:1\n",
+      "   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X26sZmlsZQ==.jl:1\n",
       "  findMax(!Matched::Real, !Matched::Real)\n",
-      "   @ Main ~/code/sci-comp-book/julia-output/adv-functions.ipynb:1\n",
+      "   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X24sZmlsZQ==.jl:1\n",
       "  findMax(!Matched::Real...)\n",
-      "   @ Main ~/code/sci-comp-book/julia-output/adv-functions.ipynb:1\n",
+      "   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X25sZmlsZQ==.jl:1\n",
       "\n",
       "\n",
       "Stacktrace:\n",
       " [1] top-level scope\n",
-      "   @ ~/code/sci-comp-book/julia-output/adv-functions.ipynb:1"
+      "   @ ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X30sZmlsZQ==.jl:1"
      ]
     }
    ],
@@ -505,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -532,13 +562,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "Float64"
       ]
      },
      "metadata": {},
@@ -546,18 +576,18 @@
     }
    ],
    "source": [
-    "findMax(collect(1:10))"
+    "typeof(Inf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "(10, Int64)"
       ]
      },
      "metadata": {},
@@ -565,12 +595,31 @@
     }
    ],
    "source": [
-    "findMax(collect(big(1):big(10)))"
+    "findMax(collect(1:10)), typeof(findMax(collect(1:10)),)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, BigInt)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "findMax(collect(big(1):big(10))), typeof(findMax(collect(big(1):big(10))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -652,13 +701,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "g (generic function with 2 methods)"
+       "g (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -674,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
