--- a/julia-output/comp-types.ipynb
+++ b/julia-output/comp-types.ipynb
@@ -903,7 +903,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0-rc3",
+   "display_name": "Julia 1.11.0",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -911,7 +911,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0-rc3"
+   "version": "1.11.0"
   }
  },
  "nbformat": 4,
