--- a/julia-output/parallel.ipynb
+++ b/julia-output/parallel.ipynb
@@ -653,7 +653,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0-rc1",
+   "display_name": "Julia 1.11.0",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -661,7 +661,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0-rc1"
+   "version": "1.11.0"
   }
  },
  "nbformat": 4,
