--- a/julia-output/adv-makie.ipynb
+++ b/julia-output/adv-makie.ipynb
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,26 @@
     }
    ],
    "source": [
-    "lines(t)"
+    "fig = lines(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CairoMakie.Screen{IMAGE}\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "save(\"../assets/plots/makie/triangle.png\", fig)"
    ]
   },
   {
